src/objects/bizible__Bizible_Data__c.object
<CustomObject>
    <fields>
        <fullName>bizible__FT_Date__c</fullName>
        <label>Date (FT)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible__ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bizible__LAC_AdGroup_Id__c</fullName>
        <inlineHelpText>Ad Group ID of ad from Adwords/Bing Ads (Lead Conversion).</inlineHelpText>
        <label>Ad Group ID (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_AdGroup_Name__c</fullName>
        <inlineHelpText>Ad Group of ad from Adwords/Bing Ads (Lead Conversion).</inlineHelpText>
        <label>Ad Group (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Ad_Description_1__c</fullName>
        <inlineHelpText>Copy of line 1 of ad from Adwords/Bing Ads (Lead Conversion).</inlineHelpText>
        <label>Ad Description #1 (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Ad_Description_2__c</fullName>
        <inlineHelpText>Copy of line 2 of ad from Adwords/Bing Ads (Lead Conversion).</inlineHelpText>
        <label>Ad Description #2 (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Ad_DestinationUrl__c</fullName>
        <inlineHelpText>Destination URL of ad from Adwords/Bing Ads (Lead Conversion).</inlineHelpText>
        <label>Ad Destination URL (LC)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Ad_DisplayUrl__c</fullName>
        <inlineHelpText>Display URL of ad from Adwords/Bing Ads (Lead Conversion).</inlineHelpText>
        <label>Ad Display URL (LC)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Ad_Id__c</fullName>
        <inlineHelpText>Ad ID of ad from Adwords/Bing Ads (Lead Conversion).</inlineHelpText>
        <label>Ad ID (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Ad_Title__c</fullName>
        <inlineHelpText>Title of ad from Adwords/Bing Ads (Lead Conversion).</inlineHelpText>
        <label>Ad Content (LC)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Campaign_Id__c</fullName>
        <inlineHelpText>Campaign ID from Adwords/Bing Ads (Lead Conversion).</inlineHelpText>
        <label>Campaign ID (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Campaign_Name__c</fullName>
        <inlineHelpText>Campaign from Adwords/Bing Ads, or utm_campaign value (Lead Conversion).</inlineHelpText>
        <label>Campaign (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Date__c</fullName>
        <label>Date (LC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Device__c</fullName>
        <inlineHelpText>Device &amp; Browser (Lead Conversion).</inlineHelpText>
        <label>Device (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Geo_CIty__c</fullName>
        <inlineHelpText>City of IP Address (Lead Conversion).</inlineHelpText>
        <label>City (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Geo_Country__c</fullName>
        <inlineHelpText>Country of IP Address (Lead Conversion).</inlineHelpText>
        <label>Country (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Geo_Region__c</fullName>
        <inlineHelpText>Region of IP Address (Lead Conversion).</inlineHelpText>
        <label>Region (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Keyword_Id__c</fullName>
        <inlineHelpText>Keyword ID from Adwords/Bing Ads (Lead Conversion).</inlineHelpText>
        <label>Keyword ID (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Keyword_MatchType__c</fullName>
        <inlineHelpText>Match Type from Adwords/Bing Ads (Lead Conversion).</inlineHelpText>
        <label>Keyword Match Type (LC)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Keyword_Text__c</fullName>
        <inlineHelpText>Keyword with Matchtype from Adwords/Bing Ads, or utm_term value (Lead Conversion).</inlineHelpText>
        <label>Keyword (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_LandingPage__c</fullName>
        <inlineHelpText>First page viewed during session (Lead Conversion).</inlineHelpText>
        <label>Landing Page (LC)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_Medium__c</fullName>
        <inlineHelpText>utm_medium value (Lead Conversion).</inlineHelpText>
        <label>Medium (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_ReferrerPage__c</fullName>
        <inlineHelpText>Referring site of session (Lead Conversion).</inlineHelpText>
        <label>Referrer Page (LC)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_SearchPhrase__c</fullName>
        <inlineHelpText>Search Phrase entered into search engine (Lead Conversion).</inlineHelpText>
        <label>Search Phrase (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__LAC_WebSource__c</fullName>
        <label>WS</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Bizible Attribution</label>
    <nameField>
        <label>WebSource (LC)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bizible Attribution</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>